# picow-bluetooth-numpad

./: CMakeLists.txt  LICENSE  README.md  ble_keyboard.h  bluetooth_classic_keyboard.h  main.c  picow-bluetooth-numpad.gatt
key_matrix/: key_matrix.c  key_matrix.h
keyboard/: ble.c  ble_keyboard.c  ble_keyboard.h  bluetooth_classic.c  bluetooth_classic_keyboard.c  bluetooth_classic_keyboard.h  keyboard.h  picow-bluetooth-numpad.gatt  scancodes.h
scripts/: copy_and_launch_terminal.sh
